<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hr.from.bkoruznjak.smarterbytheday.AboutAppActivity"
    tools:showIn="@layout/activity_about_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF888888" />

        <TextView
            android:id="@+id/about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/about_text"
            android:textColor="#FF888888"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/app_version"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/app_version_content"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/riddle_version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/riddle_version"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/riddle_version_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/riddle_version_content"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/riddle_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/riddle_count"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/riddle_count_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1.0"
                android:keepScreenOn="true"
                android:text="@string/riddle_count_content"
                android:textColor="#FF888888"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FF888888" />

        <TextView
            android:id="@+id/credits_title_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/credits_title"
            android:textColor="#FF888888"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/credits_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/credits_text"
            android:textColor="#FF888888"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>
