<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="hr.from.bkoruznjak.myfirstandroidapp.AboutActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/about_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="17dp"
                android:gravity="center"
                android:text="@string/about_text"
                android:layout_margin="15dp"/>

            <TextView
                android:id="@+id/credits_title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="30dp"
                android:gravity="center"
                android:text="@string/credits_title"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/credits_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/credits_text"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
